--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -6,18 +6,88 @@ body{
     overflow-x: hidden;
     font-family: 'Ubuntu';
 }
+@media only screen and (min-width: 768px){
+    .header{
+        &__info{
+            &-about{
+                width: 40%;
+            }
+            &-photo{
+                width: 20%;
+            }
+            &-contact{
+                width: 40%;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 767px){
+    .header{
+        &__info{
+            width: 100%;
+            display: inline-block!important;
+            &-about{
+                margin-bottom: 2.5em;
+                padding-right: 0!important;
+            }
+            &-photo{
+                margin: 0 auto;
+            }
+            &-contact{
+                margin-top: 2.5em;
+                text-align: left!important;
+                img{
+                    left:0;
+                }
+            }
+        }
+    }
+    a.preview{
+        &:hover{
+            span{
+                left: 0px!important;
+            }
+        }
+        span{
+            img{
+                border-width: 0;
+                padding: 2px;
+                width: 250px!important;
+                height: auto;
+            }
+        }
+    }
+    .languages{
+        .section__content{
+            width: 100%;
+            .lang-group{
+                width: 50%!important;
+                margin-bottom: 10px;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 575px){
+    .languages{
+        .section__content{
+            display:inline-block!important;
+            width: 100%;
+            .lang-group{
+                width: 100%!important;
+                margin-bottom: 10px;
+            }
+        }
+    }
+}
 
 .header{
     margin:0 auto;
     max-width: 1240px;
-    padding: 1.5em 2.5em;
-    &__inner{
-        text-align: center;
-    }
+    padding: 2.5em 2.5em;
     &__info{
         display: flex;
         justify-content: space-between;
-        &--left{
+        &-about{
             position: relative;
             min-width: 270px;
             text-align: left;
@@ -37,28 +107,30 @@ body{
                 color:#666766;
             }
         }
-        &--mid{
+        &-photo{
             text-align: center;
             .avatar{
+                margin: 0 auto;
                 width: 160px;
                 height: 160px;
                 min-width: 160px;
                 max-width: 190px;
                 min-height: 160px;
                 max-height: 190px;
-                border: 1px solid #d3d3d3;
+                border: 2px solid #d3d3d3;
                 border-radius: 50%;
-                background: #4685c6;
+                background: #fff;
             }
         }
-        &--right{
-            min-width: 270px;
+        &-contact{
             padding-left: 30px;
             position: relative;
             text-align: right;
             line-height: 1.5;
             padding-right: 30px;
-
+            .contact{
+                white-space: nowrap;
+            }
             .contact:not(:first-child){
                 padding-top:8px;
             }
@@ -137,10 +209,10 @@ body{
                     margin:0 auto;
                     justify-content: space-between;
                     font-style: italic;
-                    &--left{
+                    &-about{
                         text-align: left;
                     }
-                    &--right{
+                    &-contact{
                         text-align: right;
                     }
                 }
@@ -183,11 +255,43 @@ body{
                         .desc-group{
                             position: relative;
                             .item-desc{
+                                word-wrap: break-word;
                                 line-height: 20px;
                                 padding-left: 30px;
                                 a{
                                     text-decoration: none;
                                     color: #4685c6;
+                                    &.preview{
+                                        position: relative;
+                                        z-index: 0;
+                                        &:hover{
+                                            background-color: transparent;
+                                            z-index: 50;
+                                            span{
+                                                visibility: visible;
+                                                bottom: 0;
+                                                left: 100px;
+                                            }
+                                        }
+                                        span{
+                                            position: absolute;
+                                            background-color: #fff;
+                                            padding-bottom: 5px;
+                                            left: -1000px;
+                                            border: 1px solid#4685c6;
+                                            visibility: hidden;
+                                            color: black;
+                                            text-decoration: none;
+                                            border-radius: 5px;
+                                            text-align: center;
+                                            box-shadow: 5px 5px 20px #4685c6;
+                                            img{
+                                                border-width: 0;
+                                                width: 400px;
+                                                height: auto;
+                                            }
+                                        }
+                                    }
                                 }
                             }
                         }
