--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -149,9 +149,9 @@ body{
 .main{
     margin:0 auto;
     max-width: 1240px;
-    padding: 1.5em 2em;
+    padding: 0 2em 1.5em 2em;
     .section{
-        margin-bottom: 2em;
+        margin-bottom: 1.5em;
         &__title{
             text-align: center;
             font-weight: 700;
