--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -6,7 +6,7 @@ body{
     overflow-x: hidden;
     font-family: 'Ubuntu';
 }
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 992px){
     .header{
         &__info{
             &-about{
@@ -17,6 +17,22 @@ body{
             }
             &-contact{
                 width: 40%;
+            }
+        }
+    }
+}
+@media print, screen and (min-width: 768px){
+    .header{
+        &__info{
+            &-about{
+                width: 37.5%;
+            }
+            &-photo{
+                width: 25%;
+            }
+            &-contact{
+                width: 37.5%;
+                padding-left: 0!important;
             }
         }
     }
@@ -116,9 +132,11 @@ body{
                 max-width: 190px;
                 min-height: 160px;
                 max-height: 190px;
-                border: 2px solid #d3d3d3;
+                border: 2px solid#4685c6;
                 border-radius: 50%;
-                background: #fff;
+                box-shadow: 0px 0px 7px #68aaec;
+                background-image: url("/dist/img/Loc.jpg");
+                background-size: cover;
             }
         }
         &-contact{
